GUACAMOLE-55: Ensure <p> / <div> elements within the clipboard contents are rendered with normal spacing.

--- a/guacamole/src/main/webapp/app/clipboard/styles/clipboard.css
+++ b/guacamole/src/main/webapp/app/clipboard/styles/clipboard.css
@@ -40,6 +40,11 @@
     min-width: 0;
 }
 
+.clipboard p,
+.clipboard div {
+    margin: 0;
+}
+
 .clipboard img {
     max-width: 100%;
     max-height: 100%;
